fixing skills JS icon not fitting correctly on mobile

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -554,6 +554,10 @@ body {
           font-size: 1.4rem;
           text-align: center;
           margin: 0 auto;
+          .sub-headline {
+            padding-top: 1em;
+            font-weight: 500;
+          }
         }
         .about-me__job {
           // border: 2px solid orange;
@@ -598,7 +602,7 @@ body {
         .skills-icons {
           // border: 2px solid yellowgreen;
 
-          max-width: 85%;
+          max-width: 90%;
           margin: 0 auto;
 
           ul {
@@ -607,7 +611,7 @@ body {
             justify-content: space-evenly;
             flex-wrap: wrap;
             li {
-              width: 5em;
+              width: 6em;
               margin: 1em 0;
               list-style: none;
               display: inherit;
@@ -788,12 +792,13 @@ body {
 
     .grid-container {
       padding: 3em 0;
+
       .projects-grid {
         display: flex;
         flex-flow: wrap;
         gap: 5em 1em;
         justify-content: center;
-        width: 90%;
+        width: 95%;
         margin: 0 auto;
         .card {
           padding: 2em;
@@ -822,7 +827,6 @@ body {
           .card__info {
             p {
               letter-spacing: 1px;
-
               padding: 10px 0;
             }
           }
@@ -935,7 +939,7 @@ body {
         margin-bottom: 0;
       }
       textarea {
-        height: 14rem;
+        height: calc(14rem + 1px);
       }
       #input-submit {
         position: relative;
@@ -1029,6 +1033,20 @@ body {
       }
       .projects-title {
         // padding-top: 1em !important;
+      }
+      .grid-container {
+        .projects-grid {
+          gap: 0;
+          &:nth-child(1) .card3 {
+            order: 4;
+          }
+          &:nth-child(1) .card4 {
+            order: 3;
+          }
+          &:nth-child(1) .card6 {
+            text-align: left !important;
+          }
+        }
       }
     }
   }
